Disabling install job cleanup in helm hook for testing

--- a/templates/install-job.yaml
+++ b/templates/install-job.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ include "codefresh-runner.namespace" . }}
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-delete-policy": hook-succeeded
+    #    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   template:
     spec:
